<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmartSuitcase</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="goodWeight">Your are not ok to go</string>
    <string name="badWeight">Your are ok to go</string>
    <string name="Weight">Weight</string>
    <string name="LockUnlock">Lock/Unlock</string>
    <string name="LockUnlockDescription">Your suitecase is</string>
    <string name="locked">LOCKED</string>
    <string name="unlocked">UNLOCKED</string>
    <string name="TitleOfChart">Miles traveled so far</string>
    <string name="TitleCountriesVisited">Countries visited so far</string>
    <string name="CountriesVisted1">France</string>
    <string name="CountriesVisted2">Spain</string>
    <string name="CountriesVisted3">Italy</string>
    <string name="CountriesVisted4">Libia</string>

    <!-- SMS String -->
    <string name="title_send_sms">Hello world!</string>
    <string name="description_send_sms">Click on the button \'Send\' to send SMS \'Hello Achraf Phone\' to number phone +216 22 925 451 ....</string>
    <string name="button_send_sms">Send</string>

    <string-array name="nav_drawer_items">
        <item>SmartSuitcase</item>
        <item>Lock/Unlock</item>
        <item>Built-In-Scale</item>
        <item>Location Traking</item>
        <item>Stats</item>
        <item>AntiTheftCamera</item>
        <item>Connect</item>
        <item>Settings</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_lock</item>
        <item>@drawable/ic_weight</item>
        <item>@drawable/ic_track</item>
        <item>@drawable/ic_stats</item>
        <item>@drawable/ic_home_cam</item>
        <item>@drawable/ic__home_connect</item>
        <item>@drawable/ic_setting</item>
    </array>

</resources>