<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:chart="http://schemas.android.com/apk/com.db.chart"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/ChartTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/TitleOfChart"
            android:textSize="25sp" />

        <com.db.chart.view.LineChartView
            android:id="@+id/linechart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            chart_axisBorderSpacing="0dp"
            chart_axisColor="@color/axis"
            chart_shadowColor="#80000000"
            chart_shadowDy="1dp"
            chart_shadowRadius="1dp"
            chart_typeface="Roboto-Regular.ttf"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="15dp" >
        </com.db.chart.view.LineChartView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:weightSum="2" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:src="@drawable/ic_earth" />

            <TextView
                android:id="@+id/TitleCountriesVisitedId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/TitleCountriesVisited"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/CountriesVisitedId1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="#B2DFDB"
                android:text="@string/CountriesVisted1"
                android:textColor="#FFF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/CountriesVisitedId2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="#B2DFDB"
                android:text="@string/CountriesVisted2"
                android:textColor="#FFF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/CountriesVisitedId3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="#B2DFDB"
                android:text="@string/CountriesVisted3"
                android:textColor="#FFF"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/CountriesVisitedId4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="#B2DFDB"
                android:text="@string/CountriesVisted4"
                android:textColor="#FFF"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>